@@ -16,7 +16,7 @@
 #
 
 # We use the GNU Make Standard Library
-include build/gmsl/gmsl
+include $(BUILD_SYSTEM)/../gmsl/gmsl
 
 # This is the Android NDK version number as a list of three items:
 # major, minor, revision
@@ -371,6 +371,7 @@ $$(_OBJ): PRIVATE_CFLAGS   := $$($$(my)CFLAGS) \
                               $$($$(my)$(LOCAL_ARM_MODE)_$(LOCAL_BUILD_MODE)_CFLAGS) \
                               $$(LOCAL_C_INCLUDES:%=-I%) \
                               -I$$(LOCAL_PATH) \
+                              $$(LOCAL_CPPFLAGS) \
                               $$(LOCAL_CFLAGS) \
                               $$(NDK_APP_CPPFLAGS) \
                               $$(NDK_APP_CFLAGS)
@@ -430,7 +431,8 @@ $$(_OBJ): PRIVATE_CXXFLAGS := $$($$(my)CXXFLAGS) \
                               $$($$(my)$(LOCAL_ARM_MODE)_$(LOCAL_BUILD_MODE)_CFLAGS) \
                               $$(LOCAL_C_INCLUDES:%=-I%) \
                               -I$$(LOCAL_PATH) \
-                              $$(LOCAL_CFLAGS) \
+                              $$(LOCAL_CPPFLAGS) \
+                              $$(LOCAL_CXXFLAGS) \
                               $$(NDK_APP_CPPFLAGS) \
                               $$(NDK_APP_CXXFLAGS) \
 
